@@ -1,47 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record fb(List<fb.a> b) {
-   public static final fb a = new fb(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class fb implements ArgumentType<fb.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(xh.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(xh.c("argument.angle.invalid"));
 
-   public fb(wb $$0) {
-      this($$0.a(wb.a(ArrayList::new, 8), fb.a::new));
+   public static fb a() {
+      return new fb();
    }
 
-   public void a(wb $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public static float a(CommandContext<ev> $$0, String $$1) {
+      return ((fb.a)$$0.getArgument($$1, fb.a.class)).a((ev)$$0.getSource());
    }
 
-   public static fb a(xw<?> $$0, fb.b $$1) {
-      List<fb.a> $$2 = $$0.a().stream().map($$1x -> {
-         xq $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new fb.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new fb($$2);
-   }
-
-   public List<fb.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, xq b) {
-      public a(wb $$0) {
-         this($$0.d(16), xq.a($$0));
-      }
-
-      public void a(wb $$0) {
-         $$0.a(this.a, 16);
-         xq.a($$0, this.b);
+   public fb.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = gz.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new fb.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
+         }
       }
    }
 
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      xq sign(String var1);
+   public Collection<String> getExamples() {
+      return c;
+   }
+
+   public static final class a {
+      private final float a;
+      private final boolean b;
+
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
+      }
+
+      public float a(ev $$0) {
+         return azj.h(this.b ? this.a + $$0.k().j : this.a);
+      }
    }
 }
