@@ -5,34 +5,37 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
-public class gd implements ArgumentType<csx> {
-   private static final Collection<String> a = List.of("container.*", "container.5", "weapon");
-   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> xe.b("slot.unknown", $$0));
+public class gd implements ArgumentType<Integer> {
+   private static final Collection<String> a = Arrays.asList("container.5", "weapon");
+   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> xh.b("slot.unknown", $$0));
+   private static final DynamicCommandExceptionType c = new DynamicCommandExceptionType($$0 -> xh.b("slot.only_single_allowed", $$0));
 
    public static gd a() {
       return new gd();
    }
 
-   public static csx a(CommandContext<eu> $$0, String $$1) {
-      return (csx)$$0.getArgument($$1, csx.class);
+   public static int a(CommandContext<ev> $$0, String $$1) {
+      return (Integer)$$0.getArgument($$1, Integer.class);
    }
 
-   public csx a(StringReader $$0) throws CommandSyntaxException {
-      String $$1 = ey.a($$0, $$0x -> $$0x != ' ');
-      csx $$2 = csy.a($$1);
+   public Integer a(StringReader $$0) throws CommandSyntaxException {
+      String $$1 = ez.a($$0, $$0x -> $$0x != ' ');
+      cth $$2 = cti.a($$1);
       if ($$2 == null) {
          throw b.createWithContext($$0, $$1);
+      } else if ($$2.b() != 1) {
+         throw c.createWithContext($$0, $$1);
       } else {
-         return $$2;
+         return $$2.a().getInt(0);
       }
    }
 
    public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return ez.b(csy.a(), $$1);
+      return fa.b(cti.b(), $$1);
    }
 
    public Collection<String> getExamples() {
