@@ -3,40 +3,36 @@ import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.concurrent.CompletableFuture;
+import java.util.List;
 
-public class gg implements ArgumentType<String> {
-   private static final Collection<String> a = Arrays.asList("foo", "123");
-   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> xe.b("team.notFound", $$0));
+public class gg implements ArgumentType<ye> {
+   private static final Collection<String> b = List.of("{\"bold\": true}\n");
+   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> xh.b("argument.style.invalid", $$0));
+   private final jr.a c;
 
-   public static gg a() {
-      return new gg();
+   private gg(jr.a $$0) {
+      this.c = $$0;
    }
 
-   public static ezw a(CommandContext<eu> $$0, String $$1) throws CommandSyntaxException {
-      String $$2 = (String)$$0.getArgument($$1, String.class);
-      fab $$3 = ((eu)$$0.getSource()).l().aJ();
-      ezw $$4 = $$3.b($$2);
-      if ($$4 == null) {
-         throw b.create($$2);
-      } else {
-         return $$4;
+   public static ye a(CommandContext<ev> $$0, String $$1) {
+      return (ye)$$0.getArgument($$1, ye.class);
+   }
+
+   public static gg a(er $$0) {
+      return new gg($$0);
+   }
+
+   public ye a(StringReader $$0) throws CommandSyntaxException {
+      try {
+         return ez.a(this.c, $$0, ye.b.b);
+      } catch (Exception var4) {
+         String $$2 = var4.getCause() != null ? var4.getCause().getMessage() : var4.getMessage();
+         throw a.createWithContext($$0, $$2);
       }
    }
 
-   public String a(StringReader $$0) throws CommandSyntaxException {
-      return $$0.readUnquotedString();
-   }
-
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return $$0.getSource() instanceof ez ? ez.b(((ez)$$0.getSource()).r(), $$1) : Suggestions.empty();
-   }
-
    public Collection<String> getExamples() {
-      return a;
+      return b;
    }
 }
