@@ -1,19 +1,50 @@
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+import javax.annotation.Nullable;
 
-public class gzx {
-   public static final ale a = a("generated");
-   public static final ale b = a("entity");
-   public static final gzy c = a("generation marker", giw.b.a);
-   public static final gzy d = a("block entity marker", giw.b.b);
+public class gzx implements gzu {
+   private final gjo a;
+   private final gxs b;
+   private final boolean c;
 
-   public static ale a(String $$0) {
-      return ale.b("builtin/" + $$0);
+   public gzx(gjo $$0, gxs $$1, boolean $$2) {
+      this.a = $$0;
+      this.b = $$1;
+      this.c = $$2;
    }
 
-   private static gzy a(String $$0, giw.b $$1) {
-      giw $$2 = new giw(null, List.of(), Map.of(), null, $$1, gjd.a, List.of());
-      $$2.c = $$0;
-      return $$2;
+   @Override
+   public List<gjd> a(@Nullable dvd $$0, @Nullable jl $$1, azr $$2) {
+      return Collections.emptyList();
+   }
+
+   @Override
+   public boolean a() {
+      return false;
+   }
+
+   @Override
+   public boolean b() {
+      return true;
+   }
+
+   @Override
+   public boolean c() {
+      return this.c;
+   }
+
+   @Override
+   public boolean d() {
+      return true;
+   }
+
+   @Override
+   public gxs e() {
+      return this.b;
+   }
+
+   @Override
+   public gjo f() {
+      return this.a;
    }
 }
