@@ -1,250 +1,48 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class ri {
-   public static final ald<emq> a = rb.a("village/taiga/town_centers");
-   private static final ald<emq> b = rb.a("village/taiga/terminators");
-
-   public static void a(qu<emq> $$0) {
-      jp<ekk> $$1 = $$0.a(lw.aS);
-      jo<ekk> $$2 = $$1.b(sn.h);
-      jo<ekk> $$3 = $$1.b(sn.i);
-      jo<ekk> $$4 = $$1.b(sn.e);
-      jo<ekk> $$5 = $$1.b(sn.l);
-      jo<ekk> $$6 = $$1.b(sn.m);
-      jp<epg> $$7 = $$0.a(lw.aU);
-      jo<epg> $$8 = $$7.b(rc.f);
-      jo<epg> $$9 = $$7.b(rc.d);
-      jo<epg> $$10 = $$7.b(rc.k);
-      jo<epg> $$11 = $$7.b(rc.o);
-      jp<emq> $$12 = $$0.a(lw.aW);
-      jo<emq> $$13 = $$12.b(rb.a);
-      jo<emq> $$14 = $$12.b(b);
+public interface ri {
+   static void a(qx<elx> $$0) {
+      jq<elr> $$1 = $$0.a(ly.aS);
+      jq<dfw> $$2 = $$0.a(ly.aG);
+      jp.c<elx> $$3 = $$0.a(
+         elk.a,
+         new elx(
+            List.of(elx.a($$1.b(ell.t)), elx.a($$1.b(ell.u)), elx.a($$1.b(ell.v)), elx.a($$1.b(ell.w)), elx.a($$1.b(ell.x))), new emm(34, 8, emn.a, 10387312)
+         )
+      );
+      $$0.a(elk.b, new elx($$1.b(ell.f), new emm(32, 8, emn.a, 14357617)));
+      $$0.a(elk.c, new elx($$1.b(ell.g), new emm(32, 8, emn.a, 14357618)));
+      $$0.a(elk.d, new elx($$1.b(ell.e), new emm(32, 8, emn.a, 14357619)));
+      $$0.a(elk.e, new elx($$1.b(ell.j), new emm(32, 8, emn.a, 14357620)));
+      $$0.a(elk.f, new elx($$1.b(ell.a), new emm(kk.g, emo.c.b, 0.2F, 165745296, Optional.of(new emo.a($$3, 10)), 32, 8, emn.a)));
+      $$0.a(elk.q, new elx($$1.b(ell.F), new emm(24, 8, emn.a, 20083232)));
+      $$0.a(elk.g, new elx($$1.b(ell.l), new emm(32, 5, emn.b, 10387313)));
+      $$0.a(elk.h, new elx($$1.b(ell.d), new emm(80, 20, emn.b, 10387319)));
+      $$0.a(elk.i, new elx($$1.b(ell.r), new emm(new kk(9, 0, 9), emo.c.c, 0.01F, 0, Optional.empty(), 1, 0, emn.a)));
+      $$0.a(elk.j, new elx(List.of(elx.a($$1.b(ell.b)), elx.a($$1.b(ell.c))), new emm(kk.g, emo.c.d, 0.004F, 0, Optional.empty(), 1, 0, emn.a)));
       $$0.a(
-         a,
-         new emq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(emo.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(emo.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(emo.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
+         elk.k,
+         new elx(
+            List.of(
+               elx.a($$1.b(ell.y)),
+               elx.a($$1.b(ell.z)),
+               elx.a($$1.b(ell.A)),
+               elx.a($$1.b(ell.B)),
+               elx.a($$1.b(ell.C)),
+               elx.a($$1.b(ell.D)),
+               elx.a($$1.b(ell.E))
             ),
-            emq.a.b
+            new emm(40, 15, emn.a, 34222645)
          )
       );
-      rb.a(
-         $$0,
-         "village/taiga/streets",
-         new emq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(emo.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(emo.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(emo.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(emo.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(emo.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(emo.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(emo.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(emo.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(emo.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(emo.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(emo.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(emo.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(emo.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(emo.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(emo.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            emq.a.a
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new emq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(emo.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(emo.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(emo.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(emo.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(emo.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(emo.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(emo.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(emo.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(emo.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(emo.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(emo.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(emo.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(emo.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(emo.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(emo.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            emq.a.a
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/houses",
-         new emq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(emo.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(emo.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(emo.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(emo.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(emo.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(emo.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(emo.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(emo.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(emo.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(emo.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(emo.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(emo.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(emo.h(), 6)
-               }
-            ),
-            emq.a.b
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new emq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(emo.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(emo.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(emo.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(emo.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(emo.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(emo.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(emo.h(), 6)
-               }
-            ),
-            emq.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new emq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(emo.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(emo.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(emo.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(emo.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            emq.a.a
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/decor",
-         new emq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(emo.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(emo.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(emo.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(emo.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(emo.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(emo.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(emo.a($$2), 4),
-               Pair.of(emo.a($$3), 4),
-               Pair.of(emo.a($$4), 2),
-               Pair.of(emo.a($$5), 4),
-               Pair.of(emo.a($$6), 1),
-               new Pair[]{Pair.of(emo.h(), 4)}
-            ),
-            emq.a.b
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new emq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(emo.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(emo.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(emo.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(emo.a($$2), 4),
-               Pair.of(emo.a($$3), 4),
-               Pair.of(emo.a($$4), 2),
-               Pair.of(emo.a($$5), 4),
-               Pair.of(emo.a($$6), 1),
-               Pair.of(emo.h(), 4)
-            ),
-            emq.a.b
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/villagers",
-         new emq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(emo.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(emo.a("village/taiga/villagers/baby"), 1),
-               Pair.of(emo.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            emq.a.b
-         )
-      );
-      rb.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new emq(
-            $$13,
-            ImmutableList.of(Pair.of(emo.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(emo.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            emq.a.b
-         )
-      );
+      $$0.a(elk.l, new elx(List.of(elx.a($$1.b(ell.h)), elx.a($$1.b(ell.i))), new emm(24, 4, emn.a, 165745295)));
+      $$0.a(elk.m, new elx(List.of(elx.a($$1.b(ell.m)), elx.a($$1.b(ell.n))), new emm(20, 8, emn.a, 14357621)));
+      $$0.a(elk.n, new elx(List.of(elx.a($$1.b(ell.o), 2), elx.a($$1.b(ell.s), 3)), new emm(27, 4, emn.a, 30084232)));
+      $$0.a(elk.o, new elx($$1.b(ell.p), new emm(2, 1, emn.a, 14357921)));
+      $$0.a(elk.p, new elx($$1.b(ell.q), new emm(20, 11, emn.b, 10387313)));
+      $$0.a(elk.r, new elx($$1.b(ell.k), new eml(32, 3, 128, $$2.b(awy.o))));
+      $$0.a(elk.s, new elx($$1.b(ell.G), new emm(34, 8, emn.a, 83469867)));
+      $$0.a(elk.t, new elx($$1.b(ell.H), new emm(34, 12, emn.a, 94251327)));
    }
 }
