@@ -1,53 +1,19 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class rx {
-   public static final ald<edg<?, ?>> a = rv.a("delta");
-   public static final ald<edg<?, ?>> b = rv.a("small_basalt_columns");
-   public static final ald<edg<?, ?>> c = rv.a("large_basalt_columns");
-   public static final ald<edg<?, ?>> d = rv.a("basalt_blobs");
-   public static final ald<edg<?, ?>> e = rv.a("blackstone_blobs");
-   public static final ald<edg<?, ?>> f = rv.a("glowstone_extra");
-   public static final ald<edg<?, ?>> g = rv.a("crimson_forest_vegetation");
-   public static final ald<edg<?, ?>> h = rv.a("crimson_forest_vegetation_bonemeal");
-   public static final ald<edg<?, ?>> i = rv.a("warped_forest_vegetation");
-   public static final ald<edg<?, ?>> j = rv.a("warped_forest_vegetation_bonemeal");
-   public static final ald<edg<?, ?>> k = rv.a("nether_sprouts");
-   public static final ald<edg<?, ?>> l = rv.a("nether_sprouts_bonemeal");
-   public static final ald<edg<?, ?>> m = rv.a("twisting_vines");
-   public static final ald<edg<?, ?>> n = rv.a("twisting_vines_bonemeal");
-   public static final ald<edg<?, ?>> o = rv.a("weeping_vines");
-   public static final ald<edg<?, ?>> p = rv.a("patch_crimson_roots");
-   public static final ald<edg<?, ?>> q = rv.a("basalt_pillar");
-   public static final ald<edg<?, ?>> r = rv.a("spring_lava_nether");
-   public static final ald<edg<?, ?>> s = rv.a("spring_nether_closed");
-   public static final ald<edg<?, ?>> t = rv.a("spring_nether_open");
-   public static final ald<edg<?, ?>> u = rv.a("patch_fire");
-   public static final ald<edg<?, ?>> v = rv.a("patch_soul_fire");
+   public static final alg<edr<?, ?>> a = ry.a("end_platform");
+   public static final alg<edr<?, ?>> b = ry.a("end_spike");
+   public static final alg<edr<?, ?>> c = ry.a("end_gateway_return");
+   public static final alg<edr<?, ?>> d = ry.a("end_gateway_delayed");
+   public static final alg<edr<?, ?>> e = ry.a("chorus_plant");
+   public static final alg<edr<?, ?>> f = ry.a("end_island");
 
-   public static void a(qu<edg<?, ?>> $$0) {
-      rv.a($$0, a, edu.aa, new efu(dho.H.n(), dho.kJ.n(), brd.a(3, 7), brd.a(0, 2)));
-      rv.a($$0, b, edu.Z, new efs(bqu.a(1), brd.a(1, 4)));
-      rv.a($$0, c, edu.Z, new efs(brd.a(2, 3), brd.a(5, 10)));
-      rv.a($$0, d, edu.ab, new egn(dho.dV.n(), dho.dY.n(), brd.a(3, 7)));
-      rv.a($$0, e, edu.ab, new egn(dho.dV.n(), dho.pr.n(), brd.a(3, 7)));
-      rv.a($$0, f, edu.t);
-      eij $$1 = new eij(bqc.<dus>a().a(dho.oD.n(), 87).a(dho.ox.n(), 11).a(dho.oo.n(), 1));
-      rv.a($$0, g, edu.W, new ege($$1, 8, 4));
-      rv.a($$0, h, edu.W, new ege($$1, 3, 1));
-      eij $$2 = new eij(bqc.<dus>a().a(dho.oq.n(), 85).a(dho.oD.n(), 1).a(dho.oo.n(), 13).a(dho.ox.n(), 1));
-      rv.a($$0, i, edu.W, new ege($$2, 8, 4));
-      rv.a($$0, j, edu.W, new ege($$2, 3, 1));
-      rv.a($$0, k, edu.W, new ege(ehz.a(dho.or), 8, 4));
-      rv.a($$0, l, edu.W, new ege(ehz.a(dho.or), 3, 1));
-      rv.a($$0, m, edu.Y, new egv(8, 4, 8));
-      rv.a($$0, n, edu.Y, new egv(3, 1, 2));
-      rv.a($$0, o, edu.X);
-      rv.a($$0, p, edu.i, rv.a(edu.T, new egq(ehz.a(dho.oD))));
-      rv.a($$0, q, edu.ae);
-      rv.a($$0, r, edu.k, new egt(equ.e.g(), true, 4, 1, js.a(dhm::r, dho.dV, dho.dW, dho.L, dho.kJ, dho.pr)));
-      rv.a($$0, s, edu.k, new egt(equ.e.g(), false, 5, 0, js.a(dhm::r, dho.dV)));
-      rv.a($$0, t, edu.k, new egt(equ.e.g(), false, 4, 1, js.a(dhm::r, dho.dV)));
-      rv.a($$0, u, edu.i, rv.a(edu.T, new egq(ehz.a(dho.cr)), List.of(dho.dV)));
-      rv.a($$0, v, edu.i, rv.a(edu.T, new egq(ehz.a(dho.cs)), List.of(dho.dX)));
+   public static void a(qx<edr<?, ?>> $$0) {
+      ry.a($$0, a, eef.J);
+      ry.a($$0, b, eef.K, new ehd(false, ImmutableList.of(), null));
+      ry.a($$0, c, eef.M, egi.a(arm.a, true));
+      ry.a($$0, d, eef.M, egi.a());
+      ry.a($$0, e, eef.l);
+      ry.a($$0, f, eef.L);
    }
 }
